listof to arraylist if channels are null