@@ -1,5 +1,6 @@
 package fiji.plugin.appose.cellpose.cp3;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -89,13 +90,13 @@ public class Cellpose3Parameters extends CellposeParameters
 
 		public Builder channels( final Integer channel1, final Integer channel2 )
 		{
-			this.channels = List.of( channel1, channel2 );
+			this.channels = Arrays.asList( channel1, channel2 );
 			return this;
 		}
 		
 		public Builder channels( final int channel1, final int channel2 )
 		{
-			this.channels = List.of( channel1, channel2 );
+			this.channels = Arrays.asList( channel1, channel2 );
 			return this;
 		}
 
